--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@kontent-ai/stylekit": "^1.0.0",
     "react": "^18.3.1",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
@@ -29,6 +30,6 @@
     "eslint-plugin-react-refresh": "^0.4.8",
     "typescript": "^5.5.3",
     "typescript-plugin-css-modules": "^5.1.0",
-    "vite": "^5.3.4"
+    "vite": "^5.4.8"
   }
 }
